--- a/css/css01.css
+++ b/css/css01.css
@@ -13,33 +13,45 @@ a {text-decoration: none; color: #1B1B1B;}
 
 .container {min-width: 1280px;}
 
-.header {height:105px; background:#f2d129}
+
+.header {position:relative; height:105px; background:#f2d129}
+.header .header_inner {max-width: 1703px; min-width:1280px; height:105px; border:1px solid #f00; margin:0 auto; padding:0; overflow: hidden}
+.header .header_inner .titset {float:left}
+.header .header_inner .titset img {}
+.header .header_inner .nav {float:right; text-align: center}
+.header .header_inner .nav ul, ol, li {list-style: none; float: right; margin: 10px; padding: 10px; font-size:16px; font-weight: 800}
+.header .header_inner .nav > li {float:right}
+.header .header_inner .nav > li > a {display:block;}
+
+
+
 
 .mainpng {position:relative; overflow: hidden; height:calc(100vh - 105px)}
 .mainpng .cartoonbox {position:absolute; width:1920px; height:100%;
-border:1px solid #f00; top:0; left:50%; margin-left:-960px
+border:1px solid #f00; top:0; left:50%; margin-left:-929px
 }
 
 .mainpng .cartoonbox .box {position:absolute}
 .mainpng .cartoonbox .box img {width:87% }
-.mainpng .cartoonbox .box:nth-child(1) {top:20px; left:130px}
-.mainpng .cartoonbox .box:nth-child(2) {top:20px; left:691px }
-.mainpng .cartoonbox .box:nth-child(3) {top:20px; left:1320px}
-.mainpng .cartoonbox .box:nth-child(4) {top:460px; left:127px}
-.mainpng .cartoonbox .box:nth-child(5) {top:460px; left:615px}
-.mainpng .cartoonbox .box:nth-child(6) {top:460px; left:1290px}
+.mainpng .cartoonbox .box:nth-child(1) {top:20px; left:261px}
+.mainpng .cartoonbox .box:nth-child(2) {top:20px; left:727px }
+.mainpng .cartoonbox .box:nth-child(3) {top:20px; left:1257px}
+.mainpng .cartoonbox .box:nth-child(4) {top:363px; left:259px}
+.mainpng .cartoonbox .box:nth-child(5) {top:363px; left:693px}
+.mainpng .cartoonbox .box:nth-child(6) {top:363px; left:1258px}
 
 
 .secpng
-.secpng .inner {width:100%; height:1058px}
-.secpng .inner .tit {}
+.secpng .inner {width:100%; height:1058px; position: relative}
+.secpng .inner .tit {position: absolute; top:804px; left: 586px}
 .secpng .inner .tit .hd3 {}
 .secpng .inner .tit .hd3 img {}
-.secpng .inner .intbox {}
+.secpng .inner .intbox {position: absolute; top: 1022px; left:115px}
+.secpng .inner .intbox > a img {margin: 37px;}
 .secpng .inner .intbox > a {}
 .secpng .inner .intbox > a .simg {}
 .secpng .inner .intbox > a img {}
-.secpng .inner .intbox > a .stxt {}
+.secpng .inner .intbox > a .stxt {text-align:center; position:absolute; top: 0; left: 0}
 .secpng .inner .intbox > a:nth-of-type(1) {}
 .secpng .inner .intbox > a:nth-of-type(2) {}
 .secpng .inner .intbox > a:nth-of-type(3) {}
