--- a/css/css01.css
+++ b/css/css01.css
@@ -15,7 +15,7 @@ a {text-decoration: none; color: #1B1B1B;}
 
 
 .header {position:relative; height:105px; background:#f2d129}
-.header .header_inner {max-width: 1703px; min-width:1280px; height:105px; border:1px solid #f00; margin:0 auto; padding:0; overflow: hidden}
+.header .header_inner {max-width: 1703px; min-width:1280px; height:105px; margin:0 auto; padding:0; overflow: hidden}
 .header .header_inner .titset {float:left}
 .header .header_inner .titset img {}
 .header .header_inner .nav {float:right; text-align: center}
@@ -27,6 +27,20 @@ a {text-decoration: none; color: #1B1B1B;}
 
 
 .mainpng {position:relative; overflow: hidden; height:calc(100vh - 105px)}
+.mainpng::after{    content: "";
+    display: block;
+    background: url(../img/popok.png)no-repeat 0 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    width: 524px;
+    height: 427px;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+}
+
 .mainpng .cartoonbox {position:absolute; width:1920px; height:100%;
 border:1px solid #f00; top:0; left:50%; margin-left:-929px
 }
