--- a/css/css01.css
+++ b/css/css01.css
@@ -41,8 +41,7 @@ a {text-decoration: none; color: #1B1B1B;}
     margin: auto;
 }
 
-.mainpng .cartoonbox {position:absolute; width:1920px; height:100%;
-border:1px solid #f00; top:0; left:50%; margin-left:-929px
+.mainpng .cartoonbox {position:absolute; width:1920px; height:100%; top:0; left:50%; margin-left:-929px
 }
 
 .mainpng .cartoonbox .box {position:absolute}
