--- a/css/css01.css
+++ b/css/css01.css
@@ -16,14 +16,15 @@ a {text-decoration: none; color: #1B1B1B;}
 
 .header {position:relative; height:105px; background:#f2d129}
 .header .header_inner {max-width: 1703px; min-width:1280px; height:105px; margin:0 auto; padding:0; overflow: hidden}
-.header .header_inner .titset {float:left}
-.header .header_inner .titset img {}
+.header .header_inner .titset {float:left; margin-top: 10px;}
+.header .header_inner .titset img {width: 80%}
 .header .header_inner .nav {float:right; text-align: center}
 .header .header_inner .nav ul, ol, li {list-style: none; float: right; margin: 10px; padding: 10px; font-size:16px; font-weight: 800}
 .header .header_inner .nav > li {float:right}
 .header .header_inner .nav > li > a {display:block;}
 
-
+.header .header_inner .nav a:hover {color: #FFFFFF}
+.header .header_inner .nav a:hover::after {background-position:-16px 0}
 
 
 .mainpng {position:relative; overflow: hidden; height:calc(100vh - 105px)}
@@ -34,8 +35,8 @@ a {text-decoration: none; color: #1B1B1B;}
     top: 0;
     left: 0;
     z-index: 9999;
-    width: 524px;
-    height: 427px;
+    width: 676px;
+    height: 512px;
     bottom: 0;
     right: 0;
     margin: auto;
@@ -45,31 +46,72 @@ a {text-decoration: none; color: #1B1B1B;}
 }
 
 .mainpng .cartoonbox .box {position:absolute}
-.mainpng .cartoonbox .box img {width:87% }
-.mainpng .cartoonbox .box:nth-child(1) {top:20px; left:261px}
+.mainpng .cartoonbox .box img {width:100% }
+.mainpng .cartoonbox .box:nth-child(1) {top: 20px;left: 181px;}
 .mainpng .cartoonbox .box:nth-child(2) {top:20px; left:727px }
-.mainpng .cartoonbox .box:nth-child(3) {top:20px; left:1257px}
-.mainpng .cartoonbox .box:nth-child(4) {top:363px; left:259px}
-.mainpng .cartoonbox .box:nth-child(5) {top:363px; left:693px}
-.mainpng .cartoonbox .box:nth-child(6) {top:363px; left:1258px}
+.mainpng .cartoonbox .box:nth-child(3) {top:20px; left:1338px}
+.mainpng .cartoonbox .box:nth-child(4) {top:450px; left:210px}
+.mainpng .cartoonbox .box:nth-child(5) {top:450px; left:683px}
+.mainpng .cartoonbox .box:nth-child(6) {top:450px; left:1314px}
 
 
-.secpng
+.secpng {margin-top: 50px}
 .secpng .inner {width:100%; height:1058px; position: relative}
-.secpng .inner .tit {position: absolute; top:804px; left: 800px}
+.secpng .inner .tit {text-align: center}
 .secpng .inner .tit .hd3 {}
 .secpng .inner .tit .hd3 img {}
-.secpng .inner .intbox {position: absolute; top: 969px; left:315px}
-.secpng .inner .intbox > a img {margin: 37px;}
-.secpng .inner .intbox > a {}
-.secpng .inner .intbox > a .simg {}
-.secpng .inner .intbox > a img {}
-.secpng .inner .intbox > a .stxt {text-align:center; position:absolute; top: 0; left: 0}
-.secpng .inner .intbox > a:nth-of-type(1) {}
-.secpng .inner .intbox > a:nth-of-type(2) {}
-.secpng .inner .intbox > a:nth-of-type(3) {}
+.secpng .inner .intboxset {text-align: center}
+.secpng .inner .intboxset > .intbox {display: inline-block}
+.secpng .inner .intboxset > .intbox img {margin: 37px;}
+.secpng .inner .intboxset > .intbox {}
+.secpng .inner .intboxset > .intbox .simg {display: block}
+.secpng .inner .intboxset > .intbox img {}
+.secpng .inner .intboxset > .intbox .stxt {text-align:center; font-family:'Noto Sans KR', sans-serif;}
+.secpng .inner .intboxset > .intbox:nth-of-type(1) {}
+.secpng .inner .intboxset > .intbox:nth-of-type(2) {}
+.secpng .inner .intboxset > .intbox:nth-of-type(3) {}
+
+
+.secpng .inner .intboxset .intbox .btnset {}
+.secpng .inner .intboxset .intbox .btnset .btn {display:inline-block; border-radius: 50px; padding: 5px 20px; color: #FFFFFF; font-size: 14px; }
+.secpng .inner .intboxset .intbox .btnset .btn::after { 
+content:""; display:inline-block; width:5px; height:9px;
+background:url('../img/link_arr.png') no-repeat 0 0;
+vertical-align: middle; margin:0 0 0 10px	
+}
+
+.secpng .inner .intboxset .intbox .btnset .btn.view {background: #00bab6}
+.secpng .inner .intboxset .intbox .btnset .btn.link {background: #f1337b}
 
 
 
 
+#lypop {position:fixed; top:0; left:0; width:100%; height: 100vh;  z-index: 9999; display: none}
+
+#lypop .inner {position:absolute; width:800px; height:96vh; top:50%; left:50%; margin:-48vh 0 0 -400px; z-index: 100; border:1px solid #000;}
+#lypop .lypopcont {overflow: auto; height:100%; overflow-x:hidden;}
+#lypop .inner .closebtn { 
+position:absolute; top:0; right:-60px;
+display:block; width:30px; height:30px; background:#ccc;
+}
+
+#lypop .inner .closebtn .arrset {display: block; width:30px; height: 30px; position:absolute; top:0; left: 0; right:0; bottom:0; margin:auto;}
+#lypop .inner .closebtn .arrset span {display:block; width:30px; height:2px; background:#fff; }
+#lypop .inner .closebtn .arrset span + span {margin-top:10px}
+#lypop .inner .closebtn .arrset span:nth-child(1) {transform: translateY(13px) rotate(45deg)}
+#lypop .inner .closebtn .arrset span:nth-child(2) {transform: translateY(1px) rotate(-45deg)}
+
+
+#lypop .lypopcont .simg {}
+#lypop .bg {position:absolute; top:0; left:0; width:100%; height: 100vh; background:rgba(0,0,0,0);}
+
+#lypop.on {display:block}
+#lypop.on .bg {/* background:rgba(0,0,0,.7) */animation: bgani .5s linear 1; background:rgba(0,0,0,.3) }
+
+@keyframes bgani { 
+	0% {background:rgba(0,0,0,0)}
+	50% {}
+	100% {background:rgba(0,0,0,.3)}
+}
+.titset .hd3 {float: left; padding-top: 40px; font-size:18px; }
 
