--- a/link/source03/css/css01.css
+++ b/link/source03/css/css01.css
@@ -20,6 +20,7 @@ transition:background .2s linear;
 .header.ty1 {background:transparent}
 .header.ty2 {background:transparent}
 .header.ty3 {background:#fff}
+.header.ty4 {background:#fff}
 
 
 .header.ty2 .header_inner #menu > li > a {color:#fff}
@@ -33,9 +34,14 @@ transition:background .2s linear;
 .header .header_inner #menu > li > a {display:block;font-size: 18px;
 }
 
+.header .header_inner #menu > li.active > a {color:#293ea7}
 
-.header .header_inner #menu.n01 > li > a:hover {color: #005caa;}
-.header .header_inner #menu.n02 > li > a:hover { }
+.header .header_inner #menu > li.active:nth-of-type(2) > a { 
+color:#eddc5a
+}
+
+.header .header_inner #menu.n01 li, a:hover {color:#293ea7}
+.header .header_inner #menu.n02 > li > a:hover {}
 .header .header_inner #menu.n03 > li > a:hover { }
 .header .header_inner #menu.n04 > li > a:hover { }
 
@@ -46,12 +52,90 @@ transition:background .2s linear;
 .main .visual {position:relative; height: calc(100% - 100px); top: 0}
 .main .visual .grid { }
 .main .visual .grid:first-child { 
-position:absolute; top:0; bottom:0; left:5%; width:50%; height: 100%;
+position:absolute; top:0; bottom:0; left:15%; width:50%; height: 100%;
 display:flex; align-items: flex-start; flex-direction: column; justify-content: center
 }
 .main .visual .grid:first-child img {width:100%}
-.main .visual .grid:first-child .simg + .stxt {margin-top:100px }
-.main .visual .grid:first-child .stxt{font-family: 'Noto Sans KR', sans-serif; font-size: 29.3px; color: #808080; text-align: left}
+.main .visual .grid:first-child .loading + .stxt {margin-top:100px }
+
+.blur {}
+.blur .loading:first-child span {
+  display: inline-block;
+  margin: 0 -.05em;
+  animation: loading 1.2s infinite alternate;
+}
+.blur .loading:first-child span:nth-child(2) {
+  animation-delay: .2s;
+}
+.blur .loading:first-child span:nth-child(3) {
+  animation-delay: .4s;
+}
+.blur .loading:first-child span:nth-child(4) {
+  animation-delay: .6s;
+}
+.blur .loading:first-child span:nth-child(5) {
+  animation-delay: .8s;
+}
+.blur .loading:first-child span:nth-child(6) {
+  animation-delay: 1s;
+}
+.blur .loading:first-child span:nth-child(7) {
+  animation-delay: 1.2s;
+}
+.blur .loading:first-child span:nth-child(8) {
+  animation-delay: 1.4s;
+}
+@keyframes loading {
+  0% {
+    filter: blur(0);
+    opacity: 1;
+  }
+  100% {
+    filter: blur(5px);
+    opacity: .2;
+  }
+}
+
+
+.blur .loading:last-child span {
+  display: inline-block;
+  margin: 0 -.05em;
+  animation: loading 1.2s infinite alternate;
+}
+.blur .loading:last-child span:nth-child(2) {
+  animation-delay: .2s;
+}
+.blur .loading:last-child span:nth-child(3) {
+  animation-delay: .4s;
+}
+.blur .loading:last-child span:nth-child(4) {
+  animation-delay: .6s;
+}
+.blur .loading:last-child span:nth-child(5) {
+  animation-delay: .8s;
+}
+.blur .loading:last-child span:nth-child(6) {
+  animation-delay: 1s;
+}
+.blur .loading:last-child span:nth-child(7) {
+  animation-delay: 1.2s;
+}
+.blur .loading:last-child span:nth-child(8) {
+  animation-delay: 1.2s;
+}
+@keyframes loading2 {
+  0% {
+    filter: blur(0);
+    opacity: 1;
+  }
+  100% {
+    filter: blur(5px);
+    opacity: .2;
+  }
+}
+
+
+.main .visual .grid:first-child .stxt{font-family: 'Noto Sans KR', sans-serif; font-size: 29.3px; color: #808080; text-align: left; margin-top: 70px;}
 .main .visual .grid:first-child .learn_btn {font-family:'Noto Sans KR', sans-serif; width: 111px; width: 167px; height: 55px; color: #fff; text-align: center; background: #808080; font-size: 19.85px; border: none; border-radius: 5px; position: absolute; top: 83%; padding: 14px; z-index: 100;
 overflow: hidden
 }
@@ -71,10 +155,56 @@ width:100%; opacity:1;
 
 
 
-.main .visual .grid:last-child {position:absolute; top:0; right:0; bottom:0; left:0; 
-background:url('../img/mainplayer.png') no-repeat right 100%; 
-background-size:contain
+.main .visual .grid:last-child {position: absolute;
+    top: 53px;
+    right: 0;
+    bottom: -50px;
+    left: 0;
+
 }
+.main .visual .grid:last-child .motion { 
+    background: url(../img/mainplayer.png) no-repeat right 194px center;
+    background-size: contain;
+	height:100%; opacity:0.1;
+	position:absolute; top:0; left:0; right:0; bottom:0;
+	transform:translateX(1000px);
+
+/*  transition: all 0.75s cubic-bezier(.71,0,.33,1.56) 0ms;	*/
+}
+
+.main .visual .grid:last-child .motion.on { 
+	animation:anitest 1s cubic-bezier(.71,0,.33,1.56) 1; 
+	animation-fill-mode: forwards;
+}
+
+@keyframes anitest { 
+	0% { }
+	50% { }
+	100% {transform:translateX(0); }
+}
+
+.main .visual .grid:last-child .motion.f1 {animation-delay: 3ms; }
+.main .visual .grid:last-child .motion.f2 {animation-delay: 6ms; }
+.main .visual .grid:last-child .motion.f3 {animation-delay: 9ms; }
+.main .visual .grid:last-child .motion.f4 {animation-delay: 12ms; }
+.main .visual .grid:last-child .motion.f5 {animation-delay: 15ms; }
+.main .visual .grid:last-child .motion.f6 {animation-delay: 18ms; }
+.main .visual .grid:last-child .motion.f7 {animation-delay: 21ms; }
+.main .visual .grid:last-child .motion.f8 {animation-delay: 24ms; }
+.main .visual .grid:last-child .motion.f9 {animation-delay: 27ms; }
+.main .visual .grid:last-child .motion.f10 {animation-delay: 30ms; }
+.main .visual .grid:last-child .motion.f11 {animation-delay: 33ms; }
+.main .visual .grid:last-child .motion.f12 {animation-delay: 36ms; }
+.main .visual .grid:last-child .motion.f13 {animation-delay: 39ms; }
+.main .visual .grid:last-child .motion.f14 {animation-delay: 42ms; }
+.main .visual .grid:last-child .motion.f15 {animation-delay: 45ms; }
+.main .visual .grid:last-child .motion.f16 {animation-delay: 48ms; }
+.main .visual .grid:last-child .motion.f17 {animation-delay: 51ms; }
+.main .visual .grid:last-child .motion.f18 {animation-delay: 54ms; }
+.main .visual .grid:last-child .motion.f19 {animation-delay: 57ms; }
+.main .visual .grid:last-child .motion.f20 {animation-delay: 60ms; }
+
+
 /*
 .main .visual {height:1219px; display: flex}
 .main .visual .grid {flex: 1; border:1px solid #f00;}
@@ -84,20 +214,57 @@ background-size:contain
 */
 
 .player{position: relative; height: 100vh}
-.player .inner {border:1px solid #FC5E00; background: url(../img/secondbg.png)no-repeat 0 0; position: absolute; top:0; left: 0; right: 0; height: 100%;}
-.player .inner .grid:first-child {    background: url(../img/player.jpg)no-repeat center;
+.player .inner {background: url(../img/secondbg.png)no-repeat 0 0; position: absolute; top:0; left: 0; right: 0; height: 100%;}
+
+
+.player .inner .grid:first-child{}
+.player .inner .grid:first-child .motion { background: url(../img/player.jpg)no-repeat center;
     position: absolute;
     top: -5px;
     left: 0;
     bottom: 0;
     right: 0;
-    transform: rotate(0deg);
-    -moz-transform: scaleX(-1);
-    -o-transform: scaleX(-1);
-    -webkit-transform: scaleX(-1);
-    transform: translateX(-625px) scaleX(-1);
-    background-size: contain;
+    transform:translateX(-1500px) rotate(0deg) scaleX(-1);
+
+    background-size: contain;}
+
+.player .inner .grid:first-child .motion.on { 
+	animation:anitest2 1s cubic-bezier(.71,0,.33,1.56) 1; 
+	animation-fill-mode: forwards;
 }
+
+@keyframes anitest2 { 
+	0% { }
+	50% { }
+	100% {transform:translateX(-600px) rotate(0deg) scaleX(-1);}
+}
+	
+.player .inner .grid:first-child .motion.f1 {animation-delay: 3ms; }
+.player .inner .grid:first-child .motion.f2 {animation-delay: 6ms; }
+.player .inner .grid:first-child .motion.f3 {animation-delay: 9ms; }
+.player .inner .grid:first-child .motion.f4 {animation-delay: 12ms; }
+.player .inner .grid:first-child .motion.f5 {animation-delay: 15ms; }
+.player .inner .grid:first-child .motion.f6 {animation-delay: 18ms; }
+.player .inner .grid:first-child .motion.f7 {animation-delay: 21ms; }
+.player .inner .grid:first-child .motion.f8 {animation-delay: 24ms; }
+.player .inner .grid:first-child .motion.f9 {animation-delay: 27ms; }
+.player .inner .grid:first-child .motion.f10 {animation-delay: 30ms; }
+.player .inner .grid:first-child .motion.f11 {animation-delay: 33ms; }
+.player .inner .grid:first-child .motion.f12 {animation-delay: 36ms; }
+.player .inner .grid:first-child .motion.f13 {animation-delay: 39ms; }
+.player .inner .grid:first-child .motion.f14 {animation-delay: 42ms; }
+.player .inner .grid:first-child .motion.f15 {animation-delay: 45ms; }
+.player .inner .grid:first-child .motion.f16 {animation-delay: 48ms; }
+.player .inner .grid:first-child .motion.f17 {animation-delay: 51ms; }
+.player .inner .grid:first-child .motion.f18 {animation-delay: 54ms; }
+.player .inner .grid:first-child .motion.f19 {animation-delay: 57ms; }
+.player .inner .grid:first-child .motion.f20 {animation-delay: 60ms; }
+
+
+
+
+
+
 
 
 .player .inner .grid:last-child {width: 50%; float: right; margin-right:50px}
@@ -174,7 +341,7 @@ background-position:-16px 0
 display:flex
 }
 
-.team .inner .grid:first-child {width:756px; border:1px solid #f00;
+.team .inner .grid:first-child {width:756px;
 
 }
 .team .inner .grid:first-child .text {
@@ -182,7 +349,7 @@ display:flex
     height: 100%;
     flex-direction: column;
     justify-content: center;
-    text-align: left; padding-left:50px
+    text-align: left; padding-left:123px
 }
 .team .inner .grid:first-child .text .sintxt {font-family: 'GmarketSansLight'; font-size: 54.82px; line-height: 1.2}
 .team .inner .grid:first-child .text .btxt {font-family: 'GmarketSansBold'; font-size: 61.7px; line-height: 1.2}
@@ -205,16 +372,17 @@ width:100%; opacity:1;
 
 
 
+.team .inner .grid:last-child {flex:1; height:100%; overflow: hidden}
 
 
 
-
-.team .inner .grid:last-child {
-flex:1; 
-background: url(../img/teamleft.jpg)no-repeat center;
-background-size:cover; 
-	
-}
+.team .inner .grid:last-child .pic {
+flex: 1; margin-top:50px;
+    background: url(../img/team.png)no-repeat center;
+    background-size: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;}
 /*
 .team .inner .grid:first-child {width: 50%; float: left;}
 .team .inner .grid:first-child .text {position: absolute; top:320px; text-align: left; margin-left: 83px; color: #201f1f}
@@ -245,6 +413,362 @@ width:100%; opacity:1;
 
 
 #pp-nav {display:none}
+
+/** {box-sizing:border-box }
+.sns {border:1px solid #f00;
+height:400px; overflow:hidden;
+position:relative;
+}
+.sns .inner {overflow:hidden; margin-left:-78px; display:flex
+}
+.sns .inner .btn {width:32%;
+height:929px;
+;flex:none;
+backface-visibility:hidden
+}
+
+
+
+.sns .inner .btn:nth-of-type(1) {
+background:url('../img/twitter.png')no-repeat center;
+background-size:cover;transform:skew(-20deg)
+  }
+.sns .inner .btn:nth-of-type(2){
+background:url('../img/lionspark.png')no-repeat center;
+transform:skew(-20deg)
+}
+.sns .inner .btn:nth-of-type(3){
+background:url('../img/lionstv.png')no-repeat center;
+transform:skew(-20deg)
+}*/
+
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap");
+:root {
+  --card-width: 500px;
+  --card-height: 800px;
+  --card-transition-duration: 800ms;
+  --card-transition-easing: ease;
+}
+
+/** {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.787);
+  overflow: hidden;
+}
+
+button {
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+button:focus {
+  outline: none;
+  border: none;
+}*/
+.sns .inner {}
+.app {
+  /*position: relative;*/
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.app__bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -5;
+  filter: blur(8px);
+  pointer-events: none;
+  user-select: none;
+  overflow: hidden;
+}
+.app__bg::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  z-index: 1;
+  opacity: 0.8;
+}
+.app__bg__image {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) translateX(var(--image-translate-offset, 0));
+  width: 180%;
+  height: 180%;
+  transition: transform 1000ms ease, opacity 1000ms ease;
+  overflow: hidden;
+}
+.app__bg__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.app__bg__image.current--image {
+  opacity: 1;
+  --image-translate-offset: 0;
+}
+.app__bg__image.previous--image, .app__bg__image.next--image {
+  opacity: 0;
+}
+.app__bg__image.previous--image {
+  --image-translate-offset: -25%;
+}
+.app__bg__image.next--image {
+  --image-translate-offset: 25%;
+}
+
+.cardList {
+  position: absolute;
+  width: calc(3 * var(--card-width));
+  height: auto;
+}
+.cardList__btn {
+  --btn-size: 35px;
+  width: var(--btn-size);
+  height: var(--btn-size);
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 100;
+}
+.cardList__btn.btn--left {
+  left: -5%;
+}
+.cardList__btn.btn--right {
+  right: -5%;
+}
+.cardList__btn .icon {
+  width: 100%;
+  height: 100%;
+}
+.cardList__btn .icon svg {
+  width: 100%;
+  height: 100%;
+}
+.cardList .cards__wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  perspective: 1000px;
+}
+
+.card {
+  --card-translateY-offset: 100vh;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) translateX(var(--card-translateX-offset)) translateY(var(--card-translateY-offset)) rotateY(var(--card-rotation-offset)) scale(var(--card-scale-offset));
+  display: inline-block;
+  width: var(--card-width);
+  height: var(--card-height);
+  transition: transform var(--card-transition-duration) var(--card-transition-easing);
+  user-select: none;
+}
+.card::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  z-index: 1;
+  transition: opacity var(--card-transition-duration) var(--card-transition-easing);
+  opacity: calc(1 - var(--opacity));
+}
+.card__image {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.card__image img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.card.current--card {
+  --current-card-rotation-offset: 0;
+  --card-translateX-offset: 0;
+  --card-rotation-offset: var(--current-card-rotation-offset);
+  --card-scale-offset: 1.2;
+  --opacity: 0.8;
+}
+.card.previous--card {
+  --card-translateX-offset: calc(-1 * var(--card-width) * 1.1);
+  --card-rotation-offset: 25deg;
+}
+.card.next--card {
+  --card-translateX-offset: calc(var(--card-width) * 1.1);
+  --card-rotation-offset: -25deg;
+}
+.card.previous--card, .card.next--card {
+  --card-scale-offset: 0.9;
+  --opacity: 0.4;
+}
+
+.infoList {
+  position: absolute;
+  width: calc(3 * var(--card-width));
+  height: var(--card-height);
+  pointer-events: none;
+}
+.infoList .info__wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+
+  justify-content: flex-start;
+  align-items: flex-end;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+}
+
+.info {
+  margin-bottom: calc(var(--card-height) / 8);
+  margin-left: calc(var(--card-width) / 1.5);
+  transform: translateZ(2rem);
+  transition: transform var(--card-transition-duration) var(--card-transition-easing);
+}
+.info .text {
+  position: relative;
+  font-family: "Montserrat";
+  font-size: calc(var(--card-width) * var(--text-size-offset, 0.2));
+  white-space: nowrap;
+  color: #fff;
+  width: fit-content;
+}
+.info .name,
+.info .location {
+  text-transform: uppercase;
+}
+.info .location {
+  font-weight: 800;
+}
+.info .location {
+  --mg-left: 40px;
+  --text-size-offset: 0.12;
+  font-weight: 600;
+  margin-left: var(--mg-left);
+  margin-bottom: calc(var(--mg-left) / 2);
+  padding-bottom: 0.8rem;
+}
+.info .location::before, .info .location::after {
+  content: "";
+  position: absolute;
+  background: #fff;
+  left: 0%;
+  transform: translate(calc(-1 * var(--mg-left)), -50%);
+}
+.info .location::before {
+  top: 50%;
+  width: 20px;
+  height: 5px;
+}
+.info .location::after {
+  bottom: 0;
+  width: 60px;
+  height: 2px;
+}
+.info .description {
+  --text-size-offset: 0.065;
+  font-weight: 500;
+}
+.info.current--info {
+  opacity: 1;
+  display: block;
+}
+.info.previous--info, .info.next--info {
+  opacity: 0;
+  display: none;
+}
+
+.loading__wrapper {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #000;
+  z-index: 200;
+}
+.loading__wrapper .loader--text {
+  color: #fff;
+  font-family: "Montserrat";
+  font-weight: 500;
+  margin-bottom: 1.4rem;
+}
+.loading__wrapper .loader {
+  position: relative;
+  width: 200px;
+  height: 2px;
+  background: rgba(255, 255, 255, 0.25);
+}
+.loading__wrapper .loader span {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: red;
+  transform: scaleX(0);
+  transform-origin: left;
+}
+
+@media only screen and (min-width: 800px) {
+  :root {
+    --card-width: 500px;
+    --card-height: 600px;
+  }
+}
+.support {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  padding: 10px;
+  display: flex;
+}
+.support a {
+  margin: 0 10px;
+  color: #fff;
+  font-size: 1.8rem;
+  backface-visibility: hidden;
+  transition: all 150ms ease;
+}
+.support a:hover {
+  transform: scale(1.1);
+}
+
+
+
+
+
+
+
 
 
 
